# nias-cpp

./: .clang-format  .clang-tidy  .cmake_format.py  .gitignore  .markdown_link_check_config.json  .markdownlint.yml  .pre-commit-config.yaml  .ruff.toml  CMakeLists.txt  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  clang_tidy.yml  create_release.yml  downstream_inclusion.yml  sanity_checks_for_prs.yml  trigger_release_on_merge_to_main.yml
.test_projects/: CMakeLists.txt.FetchContent  CMakeLists.txt.Submodule  CMakeLists.txt.VirtualEnv  main.cpp
cmake/: ClangTidySetup.cmake  GenerateGitDiff.cmake  Headercheck.cmake  NiasCppAddLibrary.cmake  NiasCppEnsureUvAndPybind11.cmake  clang-tidy-diff.py  nias-cpp-config.cmake  nias_cpp-config.cmake  nias_cpp-config.cmake.in  parse_pyproject_toml.py
src/bindings/: bindings.cpp  bindings.h
src/nias-cpp/: bindings.cpp  bindings.h  gram_schmidt.h  vector.h
src/nias_cpp/: __init__.py  __main__.py  bindings.cpp  bindings.h  checked_integer_cast.h  concepts.h  dummy.cpp  exceptions.cpp  exceptions.h  gram_schmidt.h  indices.cpp  indices.h  interpreter.cpp  interpreter.h  type_traits.h  vector.h
src/nias_cpp/algorithms/: dot_product.h  gram_schmidt.h
src/nias_cpp/inner_products/: euclidean.h  function_based.h
src/nias_cpp/interfaces/: inner_products.h  vector.h  vectorarray.h
src/nias_cpp/operators/: inner_products.h
src/nias_cpp/vector/: dynamic.h  stl.h  traits.h  wrapper.h
src/nias_cpp/vectorarray/: list.h  numpy.h
tests/: .clang-tidy  CMakeLists.txt  boost_ext_ut_no_module.h  common.h  gram_schmidt.cpp  gram_schmidt_test.cpp  gram_schmidt_test.py  test_module.cpp  test_module.h  test_vector.h  vectorarray.cpp
tests/vector/: dynamic.cpp
tests/vectorarray/: common.h  list.cpp  numpy.cpp
