# This file is part of the NiAS project (https://github.com/nias-project).
# Copyright NiAS developers and contributors. All rights reserved.
# License: BSD 2-Clause License (https://opensource.org/licenses/BSD-2-Clause)

[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11==2.13.6"]
build-backend = "scikit_build_core.build"

[project]
name = "nias_cpp"
version = "0.1.0"
description = "C++ bindings for NIAS - Numerics in Abstract Spaces"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Felix Schindler", email = "felix.schindler@uni-muenster.de"},
  {name = "Tobias Leibner", email = "tobias.leibner@arup.com"}
]
dependencies = [
  "pybind11==2.13.6",
  "nias@git+https://github.com/nias-project/nias@188b58da859ff1cda55c14afd9c960b5d301ba34"
]

[tool.scikit-build]
# disable C++ file inclusion, rely on CMake to install the C++ files (see CMakelists.txt)
sdist.exclude = ["*.cpp", "*.h"]
wheel.expand-macos-universal-tags = true
