add_executable(gram_schmidt_test gram_schmidt.cpp)
add_executable(numpy_vectorarray_test vectorarray/numpy.cpp)
add_executable(list_vectorarray_test vectorarray/list.cpp)
target_link_libraries(gram_schmidt_test PRIVATE nias_cpp Boost::ut)
target_link_libraries(numpy_vectorarray_test PRIVATE nias_cpp Boost::ut)
target_link_libraries(list_vectorarray_test PRIVATE nias_cpp Boost::ut)
